<resources>
    <string name="app_name">PIIDEO</string>

    <string name="next_btn_caption">Enter</string>


    <string name="reg_subject_title">Hey,\nQuick question:</string>
    <string name="reg_welcome">WELCOME</string>
    <string name="reg_button_next">Begin</string>
    <string name="reg_phone_next">Enter</string>
    <string name="reg_subject_caption">If there’s only one subject\nyou like this %1$s\nwhich would it be?</string>
    <string name="reg_semestre">semester</string>
    <string name="reg_trimestre">term</string>

    <string name="reg_owl_info">The most efficient network for students</string>
    <string name="reg_subject_hint">e.g: calculus2, anatomy…</string>
    <string name="reg_phone_hint">Phone number</string>
    <string name="reg_phone_toast">Make sure you fill phone number.</string>
    <string name="reg_phone_format">Make sure entered phone correctly formatted.</string>
    <string name="reg_phone_length">Your Number must be %1$d digits</string>
    <string name="reg_acad_level">My academic level</string>
    <string name="reg_high_school">High School</string>
    <string name="reg_preparatory_classes">A Levels</string>
    <string name="reg_engineering_school">University</string>
    <string name="reg_school_next">Next</string>
    <string name="reg_save">SAVE</string>

    <string name="sbj_violation">Subject is empty.</string>

    <string name="sch_hello_title">Hello</string>
    <string name="sch_subject_violation">Question subject is empty.</string>
    <string name="sch_no_result">Nobody can answer you.</string>

    <string name="ph_take_picture">Photo</string>

    <string name="ex_network">Something went wrong while connecting to the Internet.</string>


    <string name="resToastText">New bug\'s been found</string>
    <string name="vrfy_caption">Please enter below the code You just received.</string>
    <string name="vrfy_hint">…</string>


    <string name="placeholder">Placeholder</string>

    <string name="chat_message_stub">Hello_stub</string>
    <string name="chat_message_stub_text">Hello, do you have a minute?</string>
    <string name="chat_bar_hint">Type message here</string>

    <string name="req_from_stub">Connected\nBy</string>
    <string name="req_me_stub">Me</string>

    <string name="req_dlg_title">The Topic</string>
    <string name="req_dlg_hint">Ex: Charles Law, Double Integrals…</string>
    <string name="req_dlg_empty_warn">Enter brief explanation</string>
    <string name="req_i_have">I have a</string>
    <string name="req_question_on">question on</string>

    <string name="hsh_time_up"><b>Time Up!</b></string>
    <string name="hsh_oops">oops</string>
    <string name="hsh_help_another_time">You can help another\ntime.</string>


    <string name="nty_request">New Request</string>
    <string name="nty_accepted">Request Accepted</string>
    <string name="nty_rejected">Request Rejected</string>
    <string name="nty_piideo">You got PIIDEO</string>
    <string name="nty_message">You got MESSAGE</string>

    <string name="sch_menu_caption">Settings</string>
    <string name="sch_menu_policy">Privacy Policy</string>

    <string name="usl_hint">search…</string>
    <string name="usl_sub_hint">You have a question in what subject?</string>

    <string name="no_title">Sorry</string>
    <!--<string name="no_title">EXPAND YOUR NETWORK</string>-->
    <!--<string name="no_info">Sorry,\nNo one in your network\nunderstands this subject.</string>-->
    <string name="no_info">No one is available now</string>

    <string name="no_btn">OK</string>
    <string name="nhlp_info">Inform</string>
    <string name="nhlp_classmate">1 Classmate</string>
    <string name="nhlp_more">more</string>
    <string name="nhlp_network">Add to your network</string>
    <string name="nhlp_num_students">50</string>
    <string name="nhlp_mastered">who master</string>
    <string name="nhlp_num_subjects">10+</string>
    <string name="nhlp_subjects">Subjects</string>
    <string name="nhlp_students">Students</string>

    <string name="sbj_dlg_header">Select a subject</string>
    <string name="sbj_dlg_hint">"or add a new one</string>

    <string name="opt_hint">Subject</string>

    <string name="err_offline">you are offline check your\nconnection</string>
    <string name="perm_warning">PIIDEO cannot function without these permissions.</string>
    <string name="opt_info">Choose your favorite this\nsemester/term</string>
    <string name="hlp_hint">CHOOSE AN AIDE</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>


    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="req_have_question_on">I have a question on:</string>
    <string name="req_place_of_study">Place of Study</string>

</resources>
