<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/school_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="48dp"
        android:layout_marginLeft="48dp"
        app:layout_constraintBottom_toTopOf="@+id/step_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_margin="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/high_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/reg_high_school"
                android:textAllCaps="false" />

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/prep_classes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/reg_preparatory_classes"
                android:textAllCaps="false" />

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/engin_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/reg_engineering_school"
                android:textAllCaps="false" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <FrameLayout
        android:id="@+id/step_container"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            style="@style/ButtonStyle"
            android:layout_marginStart="8dp"
            android:text="@string/next_btn_caption" />

    </FrameLayout>


</android.support.constraint.ConstraintLayout>