<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/cardView"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/center_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="10sp"
                android:text="@string/req_place_of_study" />

            <ImageView
                android:layout_marginLeft="28dp"
                android:layout_marginRight="30dp"
                android:id="@+id/flagImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:adjustViewBounds="true" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/meFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/simple_padding_larger"

                android:textSize="16sp"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                tools:text="France"
                android:layout_marginRight="@dimen/simple_padding_larger"
                android:gravity="center_horizontal" />

        </LinearLayout>


    </FrameLayout>

    <ImageView
        android:id="@+id/bottomLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/ic_request_received_line" />

    <FrameLayout
        android:id="@+id/cardView4"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="right|bottom"

        android:layout_marginBottom="8dp"
        android:background="@drawable/circle_small"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/simple_padding_tiny"
            android:layout_marginRight="@dimen/simple_padding_tiny"
            android:gravity="center"
            android:text="@string/req_me_stub" />

    </FrameLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="320dp"
        android:layout_height="80dp"

        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_goneMarginLeft="-50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_border"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    tools:text="Thermodynamique" />

                <TextView
                    android:id="@+id/explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal"
                    android:textSize="10sp"
                    tools:text="(Charles gas law)" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/simple_padding_small"
        android:gravity="center_horizontal"
        android:text="@string/req_have_question_on"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView3"
        tools:layout_editor_absoluteY="153dp" />


    <android.support.v7.widget.CardView
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="40dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_border">

            <ImageButton
                android:id="@+id/rejectRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="@dimen/simple_padding_large"
                android:layout_marginRight="@dimen/simple_padding_large"
                android:layout_marginTop="@dimen/simple_padding_medium"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:scaleType="centerInside"
                android:src="@drawable/reject_button" />

            <ImageButton
                android:id="@+id/applyRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginBottom="7dp"
                android:layout_marginRight="@dimen/simple_padding_large"
                android:layout_marginTop="@dimen/simple_padding_medium"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:scaleType="centerInside"
                android:src="@drawable/apply_button" />

        </FrameLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

</android.support.constraint.ConstraintLayout>